feat: add pagination and cors
